# Design-Patterns-Project

./: .gitignore  214ProjectTesting.aps  214ProjectTesting.sln  214ProjectTesting.vcxproj  214ProjectTesting.vcxproj.filters  Acceleration SImulation.cpp  Acceleration SImulation.h  AccelerationSimulation.cpp  AccelerationSimulation.h  AerodynamicsDepartment.cpp  AerodynamicsDepartment.h  AggressiveDriving.cpp  AggressiveDriving.h  Art.cpp  Art.h  Body.cpp  Body.h  BodyFactory.cpp  BodyFactory.h  Brakes.cpp  Brakes.h  BrakesFactory.cpp  BrakesFactory.h  Budget.cpp  Budget.h  Car.cpp  Car.h  CarBuilder.cpp  CarBuilder.h  CarComponenets.cpp  CarComponenets.h  CarComposite.cpp  CarComposite.h  CarMemento.cpp  CarMemento.h  CarPart.cpp  CarPart.h  CarPartFactory.cpp  CarPartFactory.h  CarStop.cpp  (+171 more)
Alex/: main.cpp  makefile
Data/: driver.txt  races.txt
Debug/: 214ProjectTesting.ilk  214ProjectTesting.vcxproj.FileListAbsolute.txt
Debug/214Proje.AE1827E4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Debug/214Proje.EA0B621B.tlog/: 214ProjectTesting.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Doxygen/: .gitignore  Doxyfile
Doxygen/html/: _acceleration_simulation_8h.html  _acceleration_simulation_8h_source.html  _aerodynamics_department_8h.html  _aerodynamics_department_8h_source.html  _aggressive_driving_8h.html  _aggressive_driving_8h_source.html  _art_8h.html  _art_8h_source.html  _body_8h.html  _body_8h_source.html  _body_factory_8h.html  _body_factory_8h_source.html  _brakes_8h_source.html  _brakes_factory_8h.html  _brakes_factory_8h_source.html  _budget_8h.html  _budget_8h_source.html  _car_8h.html  _car_8h_source.html  _car_builder_8h.html  _car_builder_8h_source.html  _car_componenets_8h.html  _car_componenets_8h_source.html  _car_composite_8h.html  _car_composite_8h_source.html  _car_memento_8h.html  _car_memento_8h_source.html  _car_part_8h.html  _car_part_8h_source.html  _car_part_factory_8h.html  _car_part_factory_8h_source.html  _car_stop_8h.html  _car_stop_8h_source.html  _car_transport_8h.html  _car_transport_8h_source.html  _catering_equipment_8h.html  _catering_equipment_8h_source.html  _cautious_driving_8h.html  _cautious_driving_8h_source.html  _chassis_8h.html  (+363 more)
Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  (+52 more)
Makefiles/: CMakeLists.txt
Michael/: main.cpp
System/: AccelerationSimulation.h  AerodynamicsDepartment.cpp  AerodynamicsDepartment.h  AggressiveDriving.cpp  AggressiveDriving.h  Art.cpp  Art.h  Body.cpp  Body.h  BodyFactory.cpp  BodyFactory.h  Brakes.cpp  Brakes.h  BrakesFactory.cpp  BrakesFactory.h  Budget.cpp  Budget.h  Car.cpp  Car.h  CarBuilder.cpp  CarBuilder.h  CarComponenets.cpp  CarComponenets.h  CarComposite.cpp  CarComposite.h  CarMemento.cpp  CarMemento.h  CarPart.cpp  CarPart.h  CarPartFactory.cpp  CarPartFactory.h  CarStop.cpp  CarStop.h  CarTransport.cpp  CarTransport.h  CateringEquipment.cpp  CateringEquipment.h  CautiousDriving.cpp  CautiousDriving.h  Chassis.cpp  (+121 more)
System/Alex/: main.cpp
System/Michael/: main.cpp
System/Tim/: TimMain.cpp
System/utilities/: Logger.cpp
Tim/: TimMain.cpp
fileReader/Data/: races.txt
fileReader/System/: main  makefile  testerForFileReader.cpp
logistics/: CarTransport.cpp  CateringEquipment.cpp  Container.cpp  Container.h  LogisticsStrategy.cpp  Main.cpp  RaceStrategy.cpp  RaceStrategy.h  Strategies.cpp  Strategies.h  logistics.cpp  logistics.h  makefile
tyre/: Hard.cpp  Hard.h  Medium.cpp  Medium.h  Soft.cpp  Soft.h  Tyre.cpp  TyreStrategy.cpp  TyreStrategy.h  makefile
utilities/: Logger.cpp  Logger.h
x64/Debug/: 214ProjectFinalTesting.vcxproj.FileListAbsolute.txt  main_file_final.obj.enc  raceteam.obj.enc  vc142.idb
x64/Debug/214Proje.206DB714.tlog/: 214ProjectFinalTesting.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
