cmake_minimum_required(VERSION 3.17)
project(Design_Patterns_Project)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(utilities)

add_executable(Design_Patterns_Project
        utilities/Logger.cpp
        utilities/Logger.h
        AccelerationSimulation.cpp
        AccelerationSimulation.h
        AerodynamicsDepartment.cpp
        AerodynamicsDepartment.h
        AggressiveDriving.cpp
        AggressiveDriving.h
        Art.cpp
        Art.h
        Body.cpp
        Body.h
        BodyFactory.cpp
        BodyFactory.h
        Brakes.cpp
        Brakes.h
        BrakesFactory.cpp
        BrakesFactory.h
        Budget.cpp
        Budget.h
        Car.cpp
        Car.h
        CarBuilder.cpp
        CarBuilder.h
        CarComponenets.cpp
        CarComponenets.h
        CarComposite.cpp
        CarComposite.h
        CarMemento.cpp
        CarMemento.h
        CarPart.cpp
        CarPart.h
        CarPartFactory.cpp
        CarPartFactory.h
        CarStop.cpp
        CarStop.h
        CarTransport.cpp
        CarTransport.h
        CateringEquipment.cpp
        CateringEquipment.h
        CautiousDriving.cpp
        CautiousDriving.h
        Chassis.cpp
        Chassis.h
        ChassisDepartment.cpp
        ChassisDepartment.h
        ChassisFactory.cpp
        ChassisFactory.h
        Circuit.cpp
        Circuit.h
        CompositeRoad.cpp
        CompositeRoad.h
        Container.cpp
        Container.h
        ControlledDriving.cpp
        ControlledDriving.h
        CoolingFactory.cpp
        CoolingFactory.h
        CoolingSystem.cpp
        CoolingSystem.h
        Driver.cpp
        Driver.h
        DriverStrategy.cpp
        DriverStrategy.h
        ElectronicFactory.cpp
        ElectronicFactory.h
        Electronics.cpp
        Electronics.h
        ElectronicsDepartment.cpp
        ElectronicsDepartment.h
        Engine.cpp
        Engine.h
        EngineDepartment.cpp
        EngineDepartment.h
        EngineeringCrew.cpp
        EngineeringCrew.h
        EngineeringDepartment.cpp
        EngineeringDepartment.h
        EngineFactory.cpp
        EngineFactory.h
        GarageEquipment.cpp
        GarageEquipment.h
        GrandPrix.cpp
        GrandPrix.h
        GrandPrixResult.cpp
        GrandPrixResult.h
        HandlingSimulation.cpp
        HandlingSimulation.h
        Hard.cpp
        Hard.h
        Iterator.cpp
        Iterator.h
        LapResult.cpp
        LapResult.h
        Logistics.cpp
        Logistics.h
        LogisticsStrategy.cpp
        LogisticsStrategy.h
        Medium.cpp
        Medium.h
        OfficialRaceSubject.cpp
        OfficialRaceSubject.h
        OfficialState.cpp
        OfficialState.h
        PartReplacer.cpp
        PartReplacer.h
        PitCrew.cpp
        PitCrew.h
        PitStop.cpp
        PitStop.h
        PitStopStrategy.cpp
        PitStopStrategy.h
        PracticeState.cpp
        PracticeState.h
        QualifyingRaceSubject.cpp
        QualifyingRaceSubject.h
        QualifyingState.cpp
        QualifyingState.h
        RaceSeason.cpp
        RaceSeason.h
        Race.cpp
        Race.h
        RaceResult.cpp
        RaceResult.h
        RaceSeasonResult.cpp
        RaceSeasonResult.h
        RaceState.cpp
        RaceState.h
        RaceStrategy.cpp
        RaceStrategy.h
        RaceSubject.cpp
        RaceSubject.h
        RaceTrack.cpp
        RaceTrack.h
        RaceTeam.cpp
        RaceTeam.h
        Result.cpp
        Result.h
        Road.cpp
        Road.h
        RoadIterator.cpp
        RoadIterator.h
        SeasonSubject.cpp
        SeasonSubject.h
        Simulation.cpp
        Simulation.h
        Soft.cpp
        Soft.h
        SpeedSimulation.cpp
        SpeedSimulation.h
        SteeringFactory.cpp
        SteeringFactory.h
        SteeringWheel.cpp
        SteeringWheel.h
        Strategies.cpp
        Strategies.h
        Subject.cpp
        Subject.h
        Suspension.cpp
        Suspension.h
        SuspensionFactory.cpp
        SuspensionFactory.h
        TransmissionFactory.cpp
        TransmissionFactory.h
        Transmission.cpp
        Transmission.h
        TyreChanger.cpp
        TyreChanger.h
        TyreStrategy.cpp
        TyreStrategy.h
        Tyre.cpp
        Tyre.h
        WindTunnel.cpp
        WindTunnel.h main.cpp main.h)
